# garments-iot-backend

./: README.md  docker-compose.yaml  init.sql  publisher.py  pyproject.toml
apps/api/: Dockerfile
apps/edge-devices/: nfc_mqtt.ino
apps/mqtt_gateway/: Dockerfile  subscriber.py
config/mosquitto/: mosquitto.conf
mosquitto/data/: mosquitto.db
